[gd_scene load_steps=2 format=3 uid="uid://ofkk67sn0v6n"]

[ext_resource type="Script" uid="uid://dxj1l56x48p5y" path="res://lose_ui.gd" id="1_ua3h7"]

[node name="LoseUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_ua3h7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 2021.0
offset_bottom = 1081.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15954117, 0.15954117, 0.15954117, 0.6313726)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -67.5
offset_right = 76.5
offset_bottom = -44.5
grow_horizontal = 2
grow_vertical = 2
text = "You're gonna DIE SOON..."

[node name="Restart_Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Restart"

[node name="MainMenu_Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = 37.5
offset_right = 39.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"

[connection signal="pressed" from="Control/Restart_Button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/MainMenu_Button" to="." method="_on_main_menu_button_pressed"]
